# GalChat

./: .gitignore  OptionsGenerator.py  README.md  config.toml.template  pyproject.toml  server.py  web_app.py
backend/ai/: agent.py  llm.py
backend/chatroom/: server.py  web_app.py
backend/common/: utils.py
backend/database/: database.py
frontend/: index.html
galchat/: agent.py  config.toml  database.py  llm.py  utils.py
static/: index.html
